Заменена проверка имени на StringUtils и обновлено логирование в UserController